navbar spacing update - still needs fixing

--- a/src/style.css
+++ b/src/style.css
@@ -48,9 +48,9 @@ p {
 }
 
 .navbar-item {
-  margin: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  margin: 5vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
   font-family: 'Fjalla','Roboto', sans-serif;
 }
 
